syntax = "proto3";

package com.learning.proto.userprofile;

option java_multiple_files = true;
option java_package = "com.learning.proto.userprofile";
option java_outer_classname = "UserProfileProto";

import "com/learning/common.proto";

service UserProfileService {
  rpc upsertUserProfile(UpsertUserProfile) returns (UserProfileResponse) {};
}

message UpsertUserProfile {
  UserProfile userProfile = 1;
}

message UserProfile {
  string id = 1;
  string fullName = 2;
  string phone = 3;
  string email = 4;
  string socialId = 5;
}

message UserProfileResponse {
  com.learning.proto.common.Status status = 1;
  UserProfile results = 2;
}